refactor(core/forms): fix cursor

--- a/packages/core/scss/components/_forms.scss
+++ b/packages/core/scss/components/_forms.scss
@@ -29,7 +29,6 @@
   box-shadow: var(--theme-input--box-shadow);
   padding-inline-start: $input-padding-x;
   padding-inline-end: $input-padding-x;
-  cursor: auto !important;
 
   &::placeholder {
     color: var(--theme-input-hint--color);
@@ -38,6 +37,7 @@
   @include hover {
     background-color: var(--theme-input--background--hover);
     border-color: var(--theme-input--border-color--hover);
+    cursor: auto;
   }
 
   @include focus-visible {
