fix(core): Inputs and Textareas cursor (#490)
Co-authored-by: Lukas Maurer <lukas.maurer@siemens.com>

--- a/packages/core/scss/components/_forms.scss
+++ b/packages/core/scss/components/_forms.scss
@@ -37,6 +37,7 @@
   @include hover {
     background-color: var(--theme-input--background--hover);
     border-color: var(--theme-input--border-color--hover);
+    cursor: auto;
   }
 
   @include focus-visible {
