--- a/packages/documentation/src/components/DocsComponents/GuidingPrinciples/GuidingPrincipleCard.scss
+++ b/packages/documentation/src/components/DocsComponents/GuidingPrinciples/GuidingPrincipleCard.scss
@@ -6,11 +6,21 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
-.GuidingPrinciples {
+.GuidingPrincipleCard {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
   padding: 0px;
-  gap: 36px;
-  flex-wrap: wrap;
+  gap: 0.75rem;
+
+  min-width: 15.625rem;
+  width: 15.625rem;
+
+  .GuidingPrincipleCard__Image {
+    display: block;
+    position: relative;
+    height: 13.9375rem;
+    width: 100%;
+    background-color: #ff00002a;
+  }
 }
