--- a/packages/core/src/components/card/card.scss
+++ b/packages/core/src/components/card/card.scss
@@ -52,7 +52,7 @@ $paddingContentLeftRight: 1rem;
     flex-shrink: 0;
     flex-grow: 1;
     width: calc(100% - #{$paddingContentLeftRight * 2});
-    padding: 1rem $paddingContentLeftRight;
+    padding: 1.5rem $paddingContentLeftRight $paddingContentLeftRight 1rem;
     min-height: calc(13.5rem - 2.5rem);
     background-color: var(--ix-card-background);
     border-top-left-radius: var(--theme-default-border-radius);
