--- a/packages/core/src/components/time-picker/time-picker.scss
+++ b/packages/core/src/components/time-picker/time-picker.scss
@@ -18,10 +18,8 @@
 .title {
   display: flex;
   align-items: center;
-  font-size: 16px;
-  font-weight: bold;
-  line-height: 20px;
-  min-height: 40px;
+  font: var(--theme-text-default-title);
+  min-height: $large-control-height;
   color: var(--theme-datepicker-time-header--color);
 }
 
@@ -30,18 +28,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 80px 0;
+  padding: 5rem 0;
 }
 
-input {
-  background-color: var(--theme-input--background);
-  border-radius: 2px;
-  border: 1px solid var(--theme-input--border-color);
-  box-shadow: inset 0 2px 4px 0 var(--theme-color-1) 12;
-  width: 42px;
-  height: 32px;
-  text-align: right;
-  color: var(--theme-input--color);
+input,
+.time-reference {
+  width: 2.625rem;
+  height: $large-space;
+  text-align: center;
   margin-top: $small-space;
   margin-bottom: $small-space;
 
@@ -49,19 +43,25 @@ input {
   &::-webkit-outer-spin-button,
   &::-webkit-inner-spin-button {
     -webkit-appearance: none;
-    margin: 0 5px;
+    margin: 0 0.3125rem;
   }
 
   /* Firefox */
   &[type='number'] {
     -moz-appearance: textfield;
   }
+
+}
+
+.form-control[type=number] {
+  text-align: center;
 }
 
 .columns {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
 }
 
 .column-seperator {
@@ -85,4 +85,8 @@ input {
 
 .hidden {
   display: none;
+}
+
+.time-reference {
+  margin: $medium-space 0;
 }
