--- a/packages/core/src/components/notification-card/notification-card.scss
+++ b/packages/core/src/components/notification-card/notification-card.scss
@@ -46,6 +46,10 @@
   color: var(--theme-color-neutral--contrast);
 }
 
+:host(:not(.card-insight)) {
+  --ix-card-border-color: transparent;
+}
+
 :host {
   display: block;
 
