--- a/packages/core/src/components/card-list/card-list.scss
+++ b/packages/core/src/components/card-list/card-list.scss
@@ -35,6 +35,7 @@
     display: flex;
     position: relative;
     flex-wrap: wrap;
+    width: 100%;
     gap: 0.75rem;
     transition: var(--theme-default-time) ease-in-out;
     max-height: 40rem;
