--- a/packages/core/src/components/layout/css-grid/css-grid-item.scss
+++ b/packages/core/src/components/layout/css-grid/css-grid-item.scss
@@ -7,6 +7,9 @@
  * LICENSE file in the root directory of this source tree.
  */
 :host {
+  display: block;
+  position: relative;
+
   ::slotted(*) {
     height: 100%;
     width: 100%;
