--- a/packages/core/src/components/card-title/card-title.scss
+++ b/packages/core/src/components/card-title/card-title.scss
@@ -1,11 +1,13 @@
+@import 'common-variables';
+
 :host {
   display: flex;
   position: relative;
   flex-direction: row;
   align-items: center;
   padding: 0px;
-  padding-bottom: 1.5rem;
-  gap: 1rem;
+  margin-bottom: $small-space;
+  gap: $default-space;
 
   width: 100%;
 
