--- a/packages/core/src/components/card/card.scss
+++ b/packages/core/src/components/card/card.scss
@@ -27,7 +27,8 @@ $paddingContentLeftRight: 1rem;
     flex-shrink: 0;
     flex-grow: 1;
     width: calc(100% - #{$paddingContentLeftRight * 2});
-    padding: 1.5rem $paddingContentLeftRight $paddingContentLeftRight 1rem;
+    padding: 1rem $paddingContentLeftRight;
+    min-height: calc(13.5rem - 2.5rem);
     background-color: var(--ix-card-background, transparent);
     border-top-left-radius: var(--theme-default-border-radius);
     border-top-right-radius: var(--theme-default-border-radius);
