--- a/packages/core/src/components/card-content/card-content.scss
+++ b/packages/core/src/components/card-content/card-content.scss
@@ -4,5 +4,6 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 0.5rem;
-  min-height: 8rem;
+  // min-height: 8rem;
+  height: 100%;
 }
