--- a/packages/documentation/src/css/custom.css
+++ b/packages/documentation/src/css/custom.css
@@ -177,6 +177,10 @@ aside {
   text-decoration: auto;
 }
 
+.menu__link--sublist-caret {
+  text-decoration: none !important;
+}
+
 .menu__link--sublist::after {
   display: none !important;
 }
