feat: use shadowDOM

--- a/packages/core/src/components/push-card/push-card.scss
+++ b/packages/core/src/components/push-card/push-card.scss
@@ -9,6 +9,7 @@
 
 :host {
   display: block;
+  position: relative;
 
   .icon {
     transform: scale(1.25);
@@ -17,8 +18,12 @@
   .notification {
     font-size: 40px;
   }
-}
 
-ix-card-title {
-  height: 3rem;
+  ix-card-title {
+    height: 3rem;
+  }
+
+  ix-card-content {
+    height: 7.875rem;
+  }
 }
