--- a/packages/core/src/components/select/select.scss
+++ b/packages/core/src/components/select/select.scss
@@ -17,7 +17,6 @@
   position: relative;
   height: auto;
   width: 100%;
-  box-shadow: inset 3px 3px 5px 6px var(--theme-color-shadow-3);
   border-radius: var(--theme-input--border-radius);
 
   .select {
@@ -30,6 +29,7 @@
       var(--theme-input--border-color);
     border-radius: var(--theme-input--border-radius);
     padding: 0 0 0 $small-space;
+    box-shadow: var(--theme-inset-shadow-1) !important;
 
     @include hover {
       background-color: var(--theme-input--background--hover);
