--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -41,7 +41,7 @@
     color: var(--theme-blind-header-closed--color);
     background-color: var(--theme-blind-header-closed--background);
 
-    .glyph {
+    .collapse-icon {
       color: var(--theme-blind-header-icon-closed--color);
       padding: $tiny-space $small-space;
     }
@@ -69,7 +69,7 @@
     @include hover {
       background-color: var(--theme-blind-header-open--background--hover);
 
-      .glyph {
+      .collapse-icon {
         color: var(--theme-blind-header-icon-open--color--hover);
       }
     }
@@ -77,7 +77,7 @@
     @include active {
       background-color: var(--theme-blind-header-open--background--active);
 
-      .glyph {
+      .collapse-icon {
         color: var(--theme-blind-header-icon-open--color--active);
       }
     }
@@ -93,7 +93,7 @@
       @include hover {
         background-color: var(--theme-blind-header-open--background--hover);
 
-        .glyph {
+        .collapse-icon {
           color: var(--theme-blind-header-icon-closed--color--hover);
         }
       }
@@ -101,7 +101,7 @@
       @include active {
         background-color: var(--theme-blind-header-open--background--active);
 
-        .glyph {
+        .collapse-icon {
           color: var(--theme-blind-header-icon-closed--color--active);
         }
       }
