--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -7,10 +7,14 @@
  * LICENSE file in the root directory of this source tree.
  */
 
+@import 'common-variables';
+@import './components/buttons';
+
 :host {
   display: inline-block;
   width: auto;
   height: 2rem;
+  vertical-align: middle;
 
   &.disabled {
     pointer-events: none;
@@ -19,5 +23,9 @@
   .btn {
     width: 100%;
     height: 100%;
+  }
+
+  button:not(:disabled) {
+    cursor: pointer;
   }
 }
