--- a/packages/core/src/components/card-list/card-list.scss
+++ b/packages/core/src/components/card-list/card-list.scss
@@ -34,7 +34,7 @@ $CardList__Title__Height: 1.5rem;
     transform: rotate(-90deg);
   }
 
-  .CardList__Title__Show__More {
+  .CardList__Title__Show__All {
     align-self: center;
     margin-left: auto;
     margin-right: 0px;
@@ -44,7 +44,6 @@ $CardList__Title__Height: 1.5rem;
     display: flex;
     position: relative;
     height: calc(100% - #{$CardList__Title__Height});
-    min-height: 26rem;
     width: 100%;
     gap: 1.5rem;
     transition: var(--theme-default-time) ease-in-out;
@@ -119,5 +118,55 @@ $CardList__Title__Height: 1.5rem;
     z-index: 100;
     pointer-events: none;
     opacity: 1;
+  }
+
+  .Show__All__Card {
+    display: flex;
+    position: relative;
+
+    align-self: flex-start;
+    justify-self: center;
+
+    margin-top: 2.375rem;
+
+    max-width: 11.25rem;
+    min-width: 11.25rem;
+    width: 11.25rem;
+
+    min-height: 11.25rem;
+    max-height: 11.25rem;
+    height: 11.25rem;
+
+    --ix-card-border-color: var(--theme-color-primary);
+    color: var(--theme-color-primary);
+  }
+
+  .Show__All__Card:hover {
+    background-color: var(--theme-color-ghost--hover);
+  }
+
+  .Show__All__Card:active {
+    background-color: var(--theme-color-ghost--active);
+  }
+
+  .Show__All__Card__Content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .Show__All__Card__Icon {
+    display: flex;
+    position: absolute;
+    height: 4rem;
+    width: 4rem;
+    justify-content: center;
+    align-items: center;
+    transform: scale(2);
+  }
+
+  .Show__All__Card__Text {
+    margin-bottom: 0px;
+    margin-top: auto;
   }
 }
