--- a/packages/documentation/src/components/ThemeColors/ThemeColors.css
+++ b/packages/documentation/src/components/ThemeColors/ThemeColors.css
@@ -35,21 +35,22 @@
 .Color__Preview {
   position: relative;
   display: block;
-  height: 20px;
-  width: 20px;
+  height: 24px;
+  width: 24px;
 }
 
 .Color__Preview img {
   position: absolute;
   display: block;
   border-radius: 100px;
+  opacity: 0.1;
 }
 
 .Color__Preview .Color__Value {
   position: absolute;
   display: block;
-  height: 20px;
-  width: 20px;
+  height: 24px;
+  width: 24px;
   border: var(--theme-soft-bdr-1);
   border-radius: 100px;
 }
