--- a/packages/documentation/src/pages/index.module.scss
+++ b/packages/documentation/src/pages/index.module.scss
@@ -68,7 +68,7 @@
       left: 47%;
       right: 50%;
       bottom: 40px;
-      text-decoration: none;
+      text-decoration: none !important;
       animation-duration: 10s;
     }
   }
@@ -899,10 +899,6 @@
   color: var(--theme-color-primary) !important;
 }
 
-.Button:hover {
-  text-decoration: none;
-}
-
 .Button {
   display: flex;
   align-items: center;
@@ -911,7 +907,7 @@
   padding-left: 20px;
   padding-right: 20px;
   gap: 10px;
-  text-decoration: none;
+  text-decoration: none !important;
   box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.5);
 
   &.Justify {
